--- a/client/src/components/ProductList/ProductList.styles.css
+++ b/client/src/components/ProductList/ProductList.styles.css
@@ -1,16 +1,16 @@
 .productlist-section {
-    margin-bottom: 16px;
+    margin-bottom: 20px;
   }
   
   .productlist-title {
     color: hsl(10deg, 90%, 80%);
-    margin-bottom: 16px;
+    margin-bottom: 50px;
   }
   
   .productlist-scrollList {
     display: flex;
-    flex-wrap: nowrap;
+    flex-direction: column;
+    list-style: none;
+    padding: 16px;
     gap: 16px;
-    overflow-y: auto;
-    overflow-x: scroll;
   }
