--- a/client/src/components/ProductCard/ProductCard.styles.css
+++ b/client/src/components/ProductCard/ProductCard.styles.css
@@ -1,23 +1,22 @@
 .productCard {
     position: relative;
+    display: flex;
+    gap: 24px;
   }
   
   .productCard-footer {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
+    width: auto;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     padding: 16px;
   }
   
   .productCard-title {
-    color: hsl(20deg, 100%, 100%)
+    color: hsl(20deg, 0%, 0%)
   }
   
   .productCard-add {
     background: transparent;
-    border: 1;
+    border: 0;
     cursor: pointer;
   }
